--- a/my-app/deployment.yaml
+++ b/my-app/deployment.yaml
@@ -18,6 +18,10 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: kac487/nginx:kac0.0.1
+        image: kac487/nginx:kac0.0.2
         ports:
-        - containerPort: 80
+        - containerPort: 80        
+        resources:
+          limits:
+            cpu: "0.5"
+            memory: "512Mi"
